[WAL-5741] Fix search result color in dark mode when searching for a location on the map

--- a/src/map/SetLocationDialog.scss
+++ b/src/map/SetLocationDialog.scss
@@ -1,3 +1,6 @@
 .leaflet-container {
   height: 400px;
 }
+.leaflet-control-geosearch .results > * {
+  color: #000;
+}
